fix: Disable horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
+    overflow: hidden;
+
 }
 
 * {
@@ -13,6 +15,7 @@ html {
 }
 
 .App {
+    overflow-x: hidden;
     font-family: 'Public Sans', sans-serif;
     height: 100vh;
     width: 100%;
