--- a/src/Main/Recipe/RelatedRecipes/RelatedRecipes.css
+++ b/src/Main/Recipe/RelatedRecipes/RelatedRecipes.css
@@ -1,4 +1,5 @@
 .RelatedRecipes {
+    padding-bottom: 30px;
 }
 
 .RelatedRecipes .slider-container {
